增加token验证
