# rpcserver/service.go
@@ -3,13 +3,16 @@ package rpcserver
 import (
 	"context"
 	"encoding/base64"
+	"errors"
 	"io/ioutil"
 
+	"grpc_gateway/api"
 	"grpc_gateway/easygo"
 	"grpc_gateway/proto/pb/gateway"
 	"grpc_gateway/proto/pb/hello_world"
 
 	"github.com/astaxie/beego/logs"
+	"google.golang.org/grpc/metadata"
 )
 
 type Server struct {
@@ -17,7 +20,19 @@ type Server struct {
 }
 
 func (s *Server) Echo(ctx context.Context, in *gateway.StringMessage) (*gateway.StringMessage, error) {
-	logs.Info("request: ", in.Value)
+	logs.Info("Echo: %v\n", in)
+	if md, ok := metadata.FromIncomingContext(ctx); !ok {
+		return nil, errors.New("无token信息")
+	} else {
+		l := md["authorization"]
+		if len(l) > 0 {
+			userName := api.CheckAuth(ctx)
+			logs.Debug(userName)
+		} else {
+			return nil, errors.New("token 无效")
+		}
+	}
+
 	msg := &gateway.StringMessage{
 		Value: "Hello" + in.GetValue(),
 	}
@@ -85,7 +100,7 @@ func RpcReq(ctx context.Context) error {
 	return nil
 }
 
-func httpReq(ctx context.Context) error {
+func HttpReq(ctx context.Context) error {
 	resp := easygo.HttpFromGrpc(ctx, "http://localhost:7072/rpc", "GET", nil)
 	defer resp.Body.Close()
 	body, err := ioutil.ReadAll(resp.Body)
@@ -95,4 +110,14 @@ func httpReq(ctx context.Context) error {
 
 	logs.Info("http get" + string(body))
 	return nil
+}
+
+func (s *Server) Login(ctx context.Context, in *gateway.LoginRequest) (*gateway.LoginReply, error) {
+	logs.Info("Login: %v\n", in)
+	if in.Username == "admin" && in.Password == "123456" {
+		tokenString := api.CreateToken(in.Username)
+		return &gateway.LoginReply{Status: "200", Token: tokenString}, nil
+	} else {
+		return &gateway.LoginReply{Status: "403", Token: ""}, nil
+	}
 }
